--- a/BakaPlan/BaKaPlan/styles.css
+++ b/BakaPlan/BaKaPlan/styles.css
@@ -257,3 +257,12 @@ text-align: center;
     margin: 50px auto 50px auto;
 }
 
+#content
+{
+text-align: center;
+}
+
+table {
+    margin-left:auto; 
+    margin-right:auto;
+  }
