--- a/bp/styles/general.css
+++ b/bp/styles/general.css
@@ -62,7 +62,7 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
-textarea:focus, input:focus{
+textarea:focus, input:focus, select:focus{
     outline: none;
 }
 /************************************
@@ -150,11 +150,11 @@ text-decoration:underline;
 	text-align:center;
 	height:40px;
 	/*text-shadow: 1px 1px 2px rgba(0,0,0,0.2);*/
-	-webkit-transition: background-color 1000ms linear;
-     -moz-transition: background-color 1000ms linear;
-     -o-transition: background-color 1000ms linear;
-     -ms-transition: background-color 1000ms linear;
-     transition: background-color 1000ms linear;
+	-webkit-transition: background-color 500ms ease-in-out;
+     -moz-transition: background-color 500ms ease-in-out;
+     -o-transition: background-color 500ms ease-in-out;
+     -ms-transition: background-color 500ms ease-in-out;
+     transition: background-color 500ms ease-in-out;
 }
 
 .navelement:hover{
