--- a/bp/styles/pages.css
+++ b/bp/styles/pages.css
@@ -4,11 +4,13 @@ margin:auto;
 line-height:1.9rem;
 font-size:1.25rem;
 }
+
 h1{
 color:rgba(0,124,162,1);
 text-align:center;
 font-size:4rem;
 }
+
 h2, h3 {	
 font-size:2rem;
 line-height:4rem;
@@ -40,11 +42,10 @@ border-right:5px solid #cdcdc2;
     transition: all 1s ease;
 }
 
-.side-menu a
-{
- -webkit-transition: all 1s ease;
-    -moz-transition: all 1s ease;
-    transition: all 1s ease;
+.side-menu a{
+ -webkit-transition: all 0.5s ease;
+    -moz-transition: all 0.5s ease;
+    transition: all 0.5s ease;
 text-align:center;
 display:block;
 width:100%;
@@ -53,12 +54,13 @@ line-height:4rem;
 color:#fff;
 border-bottom: 1px solid rgba(0,124,142,1);
 }
-.side-menu a:hover
-{
+
+.side-menu a:hover{
 text-decoration:none;
 background:rgba(13,13,13,0.3);
 color:rgb(250,211,78);
 }
+
 .side-menu h3{
 	font-weight:100;
 	text-align:center;
@@ -66,9 +68,11 @@ color:rgb(250,211,78);
 	text-shadow:1px 1px 2px rgba(255,255,255,0.3);
 	font-family:'Roboto slab',serif;
 }
+
 #ka{
 	vertical-align:middle;
 }
+
 #toggle-menu{
 z-index:1000;
 position:fixed;
@@ -83,9 +87,11 @@ text-align:center;
     -moz-transition: all 1s ease;
     transition: all 1s ease;
 }
+
 #toggle-menu:hover{
 	background:rgba(205,205,194,0.3);
 }
+
 #toggle-menu-circle{
 width:100px;
 z-index:1000;
@@ -107,14 +113,20 @@ FORM STYLES
 	font-size:1.25rem;
 	line-height:2rem;
 	color:rgb(0,124,142);
+	float:none;
 }
+
 .theForm{
 	max-width:500px;
-	margin:auto;	
+	margin:auto;
+	display:block;
+	
 }
-.theFormTextInput{
+
+.theFormTextInput, select, option{
 	border-radius:5px;
 	width:100%;
+	background:#fff;
 	max-width:500px;
 	color:#131313;
 	border:0;
@@ -123,7 +135,14 @@ FORM STYLES
 	height:2rem;
 	text-align:center;
 	font-weight:100;
+	font-family:'Roboto slab','Georgia', serif;
 }
+
+select:hover {
+	background:rgb(0,124,142);
+	color:#fff;
+}
+
 .theFormTextArea{
 	height:10rem;
 	font-size:1rem;
@@ -133,7 +152,8 @@ FORM STYLES
 }
 
 .theFormButton{
-	margin:15px;
+	margin-top:15px;
+	margin-bottom:10px;
 	background:#f04158;
 	border:0;
 	border-radius:5px;
@@ -143,27 +163,76 @@ FORM STYLES
 	height:3rem;
 	color:#fefefe;
 	cursor:pointer;
-	float:right;
+	font-family:'Roboto slab';
+	font-weight:100;
 }
-.theFormButton:hover
-{
-	color:#fad34e;
-	text-shadow:1px 1px 2px rgba(0,0,0,0.5);
+
+.theFormButton:hover{
+	background:#fd4158;
+	border-bottom: 0.2rem solid #f04158;
+}
+.theFormTinyButton{
+	min-width:100px;
+	font-size:1rem;
+	line-height:3rem;
+	height:3rem;
+	background:rgb(0,124,148);
+	display:block;
+	margin:10px;
+	font-family:'Roboto slab';
+}
+.theFormTinyButton:hover{
+	background:rgb(0,124,158);
+	border-bottom: 0.1rem solid rgb(0,124,148);
+}
+.module {
+	background:#f8f8f8;
+	border: 1px solid #c2c2c2;
+	border-radius:5px;
+	height:30px;
+	padding:10px 10px 10px 10px;
+	overflow:hidden;
+}
+#next {float:right;i}
+.titleBar{
+width:100%;
+display:block;
+height:30px;
+border-radius:25px;
+cursor:pointer;
+}
+
+.theTitleBarButton{
+	float:right;
+	font-size:10px;
+	line-height:20px;
+	font-family:'sans serif';
+	min-width:10px;
+	width:20px;
+	height:20px;
+	border-radius:50%;
+	margin:5px;
+}
+.titleBarInput{display:none;}
+
+.titleBarInput:checked ~ .module{
+	height:300px;
 }
 /******************************* 
 Responsiveness 
 ***************************/
 @media only screen 
 and (max-width : 720px) {
-	.page-wrap{width:80%; font-size:1.125rem; }
+	.page-wrap{width:80%; font-size:1.125rem; float:right; }
 	h2{font-size:1.5rem;}
+	#toggle-menu{width:75px;}
+	#toggle-menu-circle{font-size:0.8rem; font-weight:300; line-height:75px; width:75px; height:75px; overflow:hidden; }
 }
 
 @media only screen 
 and (max-width : 480px){
-	.page-wrap{width:95%; font-size:1rem;}
+	.page-wrap{width:85%; font-size:1rem;}
 	h2{line-height:1.6rem;}
 	#toggle-menu{width:100%; height:100px;}
-	#toggle-menu-circle{font-size:0.8rem; font-weight:300; line-height:50px; width:50px; height:50px; color:rgb(250,211,78); overflow:hidden; }
 		
 } 
